Rewrite scripts in nu

--- a/.config/gamemode.ini
+++ b/.config/gamemode.ini
@@ -1,6 +1,6 @@
 [custom]
 start=notify-send "GameMode started"
-	~/scripts/gamemode-begin.sh
+	~/scripts/gamemode-begin.nu
 
 end=notify-send "GameMode ended"
-	~/scripts/gamemode-end.sh
+	~/scripts/gamemode-end.nu
