--- a/.config/polybar/bar1.ini
+++ b/.config/polybar/bar1.ini
@@ -74,7 +74,7 @@ enable-ipc = true
 type = custom/script
 
 interval=1
-exec = ~/scripts/mediaplayer.sh
+exec = ~/scripts/mediaplayer.nu
 label = %output:0:80:..%
 format-foreground = ${colors.secondary}
 ;format-padding = 4
