change polybar colors

--- a/.config/polybar/bar1.ini
+++ b/.config/polybar/bar1.ini
@@ -139,7 +139,7 @@ interval = 25
 mount-0 = /
 # mount-1 = /mnt/windows
 # mount-2 = /boot
-label-mounted = %{F#badafc}%mountpoint%%{F-} %free% 
+label-mounted = %{F#66ffff}%mountpoint%%{F-} %free% 
 
 fixed-values = true
 
@@ -150,7 +150,7 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/pulseaudio
 
 format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix-foreground = ${colors.secondary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
@@ -175,14 +175,14 @@ click-right = pavucontrol
 type = internal/memory
 interval = 2
 format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.secondary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
 format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.secondary}
 label = %percentage:2%%
 
 [network-base]
