--- a/.config/i3/config
+++ b/.config/i3/config
@@ -419,7 +419,7 @@ exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # set wallpaper
 # exec --no-startup-id sleep 2 && nitrogen --restore
-exec --no-startup-id sleep 1 && ~/scripts/random_wallpaper.sh
+exec --no-startup-id sleep 1 && ~/scripts/random_wallpaper.nu
 
 # set powersavings for display:
 exec --no-startup-id xset s 480 dpms 600 600 600
