--- a/.config/i3/config
+++ b/.config/i3/config
@@ -150,25 +150,30 @@ mode "resize" {
 # Pressing right will grow the window's width.
 # Pressing up will shrink the window's height.
 # Pressing down will grow the window's height.
-#        bindsym j resize shrink width 10 px or 10 ppt
-#        bindsym k resize grow height 10 px or 10 ppt
-#        bindsym l resize shrink height 10 px or 10 ppt
-#        bindsym ntilde resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
+
+        bindsym $mod+h resize shrink width 10 px or 10 ppt
+        bindsym $mod+j resize grow height 10 px or 10 ppt
+        bindsym $mod+k resize shrink height 10 px or 10 ppt
+        bindsym $mod+l resize grow width 10 px or 10 ppt
 
 # same bindings, but for the arrow keys
- 	bindsym Left resize shrink width 10 px or 10 ppt
+ 	      bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
 
         bindsym $mod+Left resize shrink width 2 px or 2 ppt
-	bindsym $mod+Down resize grow height 2 px or 2 ppt
-	bindsym $mod+Up resize shrink height 2 px or 2 ppt
-	bindsym $mod+Right resize grow width 2 px or 2 ppt
+	  		bindsym $mod+Down resize grow height 2 px or 2 ppt
+	  		bindsym $mod+Up resize shrink height 2 px or 2 ppt
+	  		bindsym $mod+Right resize grow width 2 px or 2 ppt
 # back to normal: Enter or Escape
-	bindsym Return mode "default"
-        bindsym Escape mode "default"
+				bindsym Return mode "default"
+			  bindsym Escape mode "default"
 }
 
 bindsym $mod+r mode "resize"
@@ -266,6 +271,9 @@ bindsym $mod+a focus parent
 bindsym $mod+Shift+n exec ~/.config/i3/scripts/empty_workspace
 
 # Moving workspaces
+bindsym $mod+$alt+h move workspace to output left
+bindsym $mod+$alt+l move workspace to output right
+
 bindsym $mod+$alt+Left move workspace to output left
 bindsym $mod+$alt+Right move workspace to output right
 
