--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -65,6 +65,25 @@ shadow-exclude = [
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
 # xinerama-shadow-crop = false
 
+#################################
+#          Animations           #
+#################################
+
+animations = ({
+  triggers = ["close", "hide"];
+  preset = "disappear";
+  scale = 0.8;
+  duration = 0.15
+}, {
+  triggers = ["open", "show"];
+  preset = "appear";
+  scale = 1.1;
+  duration = 0.15
+}, {
+  triggers = ["geometry"];
+  preset = "geometry-change";
+  duration = 0.15;
+})
 
 #################################
 #           Fading              #
