--- a/.config/polybar/bar1.ini
+++ b/.config/polybar/bar1.ini
@@ -112,7 +112,7 @@ label-focused-padding = 0
 label-unfocused = %name%
 label-unfocused-padding = 1
 
-label-visible = <%name%>
+label-visible = (%name%)
 label-visible-padding = 0
 
 label-urgent = {%name%}
