Replace firefox keybind with librewolf

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -142,14 +142,14 @@ inactive-opacity-override = false;
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
 focus-exclude = [ "class_g = 'Cairo-clock'",
-#		  "class_g = 'firefox' && argb"
+#		  "class_g = 'librewolf' && argb"
 	        ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
 
 # Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
-# like `50:name *= "Firefox"`. picom-trans is recommended over this.
+# like `50:name *= "librewolf"`. picom-trans is recommended over this.
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
 # example:
@@ -160,7 +160,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'",
 opacity-rule = [
     "100:class_g = 'Alacritty' && focused",
     "85:class_g = 'Alacritty' && !focused",
-    "100:name *= 'Firefox'",
+    "100:name *= 'LibreWolf'",
     "100:class_g = 'discord'",
     "100:class_g = 'vlc'"
 ];
