--- a/dot-config/alacritty/alacritty.toml
+++ b/dot-config/alacritty/alacritty.toml
@@ -7,9 +7,11 @@ background = "#000005"
 
 [window]
 opacity = 0.85
-padding = {x = 5, y = 0}
 dynamic_padding = true
 
 [font]
 normal.family = "MesloLGM Nerd Font"
 size = 13
+
+[mouse]
+hide_when_typing = true
