--- a/dot-config/picom/picom.conf
+++ b/dot-config/picom/picom.conf
@@ -160,6 +160,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'",
 opacity-rule = [
     "100:class_g = 'Alacritty' && focused",
     "85:class_g = 'Alacritty' && !focused",
+    "100:class_i = 'ghostty' && focused",
+    "85:class_i = 'ghostty' && !focused",
     "100:name *= 'LibreWolf'",
     "100:class_g = 'discord'",
     "100:class_g = 'vlc'"
