--- a/dot-config/picom/picom.conf
+++ b/dot-config/picom/picom.conf
@@ -43,14 +43,67 @@ shadow-blue = 0
 #   shadow-exclude = "n:e:Notification";
 #
 # shadow-exclude = []
-shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'i3-frame'"
-];
+
+rules = (
+  {
+    animations = ({
+      triggers = ["close", "hide"];
+      preset = "disappear";
+      scale = 0.8;
+      duration = 0.2;
+    }, {
+      triggers = ["open", "show"];
+      preset = "appear";
+      scale = 1.1;
+      duration = 0.2;
+    }, {
+      triggers = ["geometry"];
+      preset = "geometry-change";
+      duration = 0.2;
+    });
+    opacity = 0.8;
+  },
+  {
+    match = "class_i = 'ghostty-floating'"
+    animations = ({
+      triggers = ["close"];
+      preset = "fly-out";
+      direction = "up"
+      duration = 0.2;
+    }, {
+      triggers = ["open", "show"];
+      preset = "fly-in";
+      direction = "up";
+      duration = 0.2;
+    });
+    opacity = 0.8;
+  },
+  { match = "focused"; opacity = 1; },
+  { match = "!focused"; opacity = 0.9; },
+  { match = "class_g = 'Alacritty' && focused"; opacity = 1; },
+  { match = "class_g = 'Alacritty' && !focused"; opacity = 0.85; },
+  { match = "class_i = 'ghostty' && focused"; opacity = 1; },
+  { match = "class_i = 'ghostty' && !focused"; opacity = 0.85; },
+  { match = "name *= 'LibreWolf'"; opacity = 1; },
+  { match = "class_g *= 'discord'"; opacity = 1; },
+  { match = "class_g *= 'vlc'"; opacity = 1; },
+
+  { match = "name = 'Notification'"; shadow = false; },
+  { match = "class_g = 'Conky'"; shadow = false; },
+  { match = "class_g = 'Notify-osd'"; shadow = false; },
+  { match = "class_g = 'Cairo-clock'"; shadow = false; },
+
+  { match = "role = 'xborder'"; blur-background = false; },
+)
+
+# shadow-exclude = [
+#   "name = 'Notification'",
+#   "class_g = 'Conky'",
+#   "class_g ?= 'Notify-osd'",
+#   "class_g = 'Cairo-clock'",
+#   "_GTK_FRAME_EXTENTS@:c",
+  # "class_g = 'i3-frame'"
+# ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
@@ -69,21 +122,7 @@ shadow-exclude = [
 #          Animations           #
 #################################
 
-animations = ({
-  triggers = ["close", "hide"];
-  preset = "disappear";
-  scale = 0.8;
-  duration = 0.2;
-}, {
-  triggers = ["open", "show"];
-  preset = "appear";
-  scale = 1.1;
-  duration = 0.2;
-}, {
-  triggers = ["geometry"];
-  preset = "geometry-change";
-  duration = 0.2;
-})
+
 
 #################################
 #           Fading              #
@@ -123,15 +162,14 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.9;
+# frame-opacity = 0.9;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false;
+# inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 # active-opacity = 1.0
@@ -141,9 +179,9 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'",
+# focus-exclude = [ "class_g = 'Cairo-clock'",
 #		  "class_g = 'librewolf' && argb"
-	        ];
+	        # ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -157,15 +195,15 @@ focus-exclude = [ "class_g = 'Cairo-clock'",
 #
 # opacity-rule = []
 
-opacity-rule = [
-    "100:class_g = 'Alacritty' && focused",
-    "85:class_g = 'Alacritty' && !focused",
-    "100:class_i = 'ghostty' && focused",
-    "85:class_i = 'ghostty' && !focused",
-    "100:name *= 'LibreWolf'",
-    "100:class_g = 'discord'",
-    "100:class_g = 'vlc'"
-];
+# opacity-rule = [
+#     "100:class_g = 'Alacritty' && focused",
+#     "85:class_g = 'Alacritty' && !focused",
+#     "100:class_i = 'ghostty' && focused",
+#     "85:class_i = 'ghostty' && !focused",
+#     "100:name *= 'LibreWolf'",
+#     "100:class_g = 'discord'",
+#     "100:class_g = 'vlc'"
+# ];
 
 #################################
 #           Corners             #
@@ -177,12 +215,12 @@ opacity-rule = [
 corner-radius = 16
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "class_g = 'i3-frame'", # i3 stack/tabs
-  "class_g = 'Dunst'" # Notifications
-];
+# rounded-corners-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'",
+#   "class_g = 'i3-frame'", # i3 stack/tabs
+#   "class_g = 'Dunst'" # Notifications
+# ];
 
 
 #################################
@@ -226,12 +264,14 @@ blur-kern = "3x3box";
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "role = 'xborder'",
-];
+
+
+# blur-background-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'",
+#   "_GTK_FRAME_EXTENTS@:c",
+#   "role = 'xborder'",
+# ];
 
 #################################
 #       General Settings        #
@@ -260,11 +300,11 @@ vsync = true;
 # child that has 'WM_STATE') and mark them as active.
 #
 # mark-wmwin-focused = false
-mark-wmwin-focused = true;
+# mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
-mark-ovredir-focused = true;
+# mark-ovredir-focused = true;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
@@ -451,11 +491,11 @@ log-level = "warn";
 #     set, and doesn't want certain window to cause unnecessary screen redirection,
 #     you can set this to `true`.
 #
-wintypes:
-{
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
-};
+# wintypes:
+# {
+#   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+#   dock = { shadow = false; clip-shadow-above = true; }
+#   dnd = { shadow = false; }
+#   popup_menu = { opacity = 0.8; }
+#   dropdown_menu = { opacity = 0.8; }
+# };
