Replace gnome-calculator with a fend popup

--- a/dot-config/picom/picom.conf
+++ b/dot-config/picom/picom.conf
@@ -64,7 +64,8 @@ rules = (
     opacity = 0.8;
   },
   {
-    match = "class_i = 'ghostty-floating'"
+    match = "class_i = 'ghostty-floating'";
+    blur-background = false;
     animations = ({
       triggers = ["close"];
       preset = "fly-out";
