--- a/dot-config/i3/config
+++ b/dot-config/i3/config
@@ -311,7 +311,8 @@ bindsym XF86AudioPrev exec playerctl previous
 ## App shortcuts
 bindsym $mod+w exec /usr/bin/librewolf
 bindsym $mod+n exec /usr/bin/thunar
-bindsym $mod+c exec /usr/bin/gnome-calculator
+bindsym $mod+c exec ghostty --background-opacity=0.7 --x11-instance-name="ghostty-floating" -e tmux new-session -A -s calculator 'fend'
+
 #bindsym Print exec scrot ~/%Y-%m-%d-%T-screenshot.png && notify-send "Screenshot saved to ~/$(date +"%Y-%m-%d-%T")-screenshot.png"
 bindsym Print exec flameshot gui -p ~/Pictures/Screenshots/ -c -s
 bindsym $mod+Print exec flameshot gui -p ~/Pictures/Screenshots/ -c
@@ -490,6 +491,9 @@ exec --no-startup-id /usr/bin/dunst
 for_window [class="Yad" instance="yad"] floating enable
 for_window [class="gnome-calculator" instance="gnome-calculator"] floating enable
 for_window [class="gnome-calculator" instance="gnome-calculator"] resize set 400 600
+for_window [class="com.mitchellh.ghostty" instance="ghostty-floating"] floating enable
+for_window [class="com.mitchellh.ghostty" instance="ghostty-floating"] resize set 1000 500
+for_window [class="com.mitchellh.ghostty" instance="ghostty-floating"] move position 460 20
 for_window [class="GitHub Desktop" instance="github desktop"] floating enable
 
 for_window [class="Blueberry.py" instance="blueberry.py"] floating enable
