Remove rounded corners for fullscreen windows

--- a/dot-config/picom/picom.conf
+++ b/dot-config/picom/picom.conf
@@ -77,6 +77,7 @@ rules = (
       duration = 0.2;
     });
   },
+  { match = "fullscreen"; corner-radius = 0; },
   { match = "focused"; opacity = 1; },
   { match = "!focused"; opacity = 0.95; },
   { match = "class_g = 'Alacritty' && focused"; opacity = 1; },
