--- a/dot-config/helix/themes/base16_default_mod.toml
+++ b/dot-config/helix/themes/base16_default_mod.toml
@@ -5,7 +5,7 @@
 "ui.linenr" = { fg = "gray", bg = "black" }
 "ui.popup" = { bg = "black" }
 "ui.linenr.selected" = { fg = "white", bg = "black", modifiers = ["bold"] }
-"ui.selection" = { fg = "black", bg = "blue" }
+"ui.selection" = { fg = "black", bg = "green" }
 "ui.selection.primary" = { fg = "white", bg = "blue" }
 "ui.highlight" = {fg = "white", bg = "black", modifiers = ["bold"] }
 "ui.text.inactive" = { fg = "gray" }
