Fix animation definition order in picom

--- a/dot-config/picom/picom.conf
+++ b/dot-config/picom/picom.conf
@@ -62,21 +62,6 @@ rules = (
       duration = 0.2;
     });
   },
-  {
-    match = "class_i = 'ghostty-floating'";
-    blur-background = false;
-    animations = ({
-      triggers = ["close"];
-      preset = "fly-out";
-      direction = "up"
-      duration = 0.2;
-    }, {
-      triggers = ["open", "show"];
-      preset = "fly-in";
-      direction = "up";
-      duration = 0.2;
-    });
-  },
   { match = "fullscreen"; corner-radius = 0; },
   { match = "focused"; opacity = 1; },
   { match = "!focused"; opacity = 0.95; },
@@ -94,6 +79,22 @@ rules = (
   { match = "class_g = 'Cairo-clock'"; shadow = false; },
 
   { match = "role = 'xborder'"; blur-background = false; },
+  {
+    match = "class_i = 'ghostty-floating'";
+    opacity = 1;
+    blur-background = false;
+    animations = ({
+      triggers = ["close"];
+      preset = "fly-out";
+      direction = "up"
+      duration = 0.2;
+    }, {
+      triggers = ["open", "show"];
+      preset = "fly-in";
+      direction = "up";
+      duration = 0.2;
+    });
+  },
 )
 
 # shadow-exclude = [
