Disable scripts on gamemode start and end

--- a/dot-config/gamemode.ini
+++ b/dot-config/gamemode.ini
@@ -1,6 +1,6 @@
 [custom]
 start=notify-send "GameMode started"
-	~/scripts/gamemode-begin.nu
+	# ~/scripts/gamemode-begin.nu
 
 end=notify-send "GameMode ended"
-	~/scripts/gamemode-end.nu
+	# ~/scripts/gamemode-end.nu
